--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "dpe-snmp-mqtt",
   "version": "0.0.1",
   "description": "digieye platform edge snmp mqtt edge is a service to get data from snmp protocol and send it to digieye platfotm using mqtt protocol",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r tsconfig-paths/register dist/src/index.js",
+    "prestart": "npm run build",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,9 +23,13 @@
   },
   "homepage": "https://github.com/DIGIEYE-FORGE/DPE-snmp-mqtt#readme",
   "devDependencies": {
+    "@types/node": "^20.2.4",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.0.3",
     "dotenv-safe": "^8.2.0",
     "env-var": "^7.3.1",
     "mqtt": "^4.3.7",
